--- a/desktop_translate/gTranslate.workflow/Contents/Info.plist
+++ b/desktop_translate/gTranslate.workflow/Contents/Info.plist
@@ -8,7 +8,7 @@
 			<key>NSMenuItem</key>
 			<dict>
 				<key>default</key>
-				<string>GoogleTranslate</string>
+				<string>gTranslate copy</string>
 			</dict>
 			<key>NSMessage</key>
 			<string>runWorkflowAsService</string>
